<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/listTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:layout_toEndOf="@+id/logo"
            android:text="@string/collect"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView android:id="@+id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <Button
        android:id="@+id/quit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit" />

</LinearLayout>